clusters/the-big-ship/apps/homepage/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: homepage-ingressroute
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: "Host(`homepage.ysonsuperhomelab.com`)"
      kind: Rule
      services:
        - name: homepage-service
          port: 3000
